# CFLOP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
img/: request-response.md
input-interface/: EDGE_Request.h  NODE_Request.h  Request.h  STATE_Request.h  extract_helper.cpp  extract_helper.h  request_types.h
src/: main.cpp
src/dispatch/: dispatch.cpp  dispatch.h  dispatcher.h
src/dispatch/include/: dispatch.h
src/dispatch/test/: dispatch_edge_test.cpp  dispatch_fail_test.cpp  dispatch_node_test.cpp  dispatch_state_test.cpp  dispatch_test.cpp  requests.cpp  requests.h  tests.cpp
src/fsm/: FinalStateMachine.cpp  FinalStateMachine.h  State.h  Transition.h
src/fsm/include/: fsm.h
src/fsm/tests/: tests.cpp
src/graph/: Edge.cpp  Edge.h  Graph.h  Node.cpp  Node.h
src/graph/include/: graph.h
src/graph/tests/: test.cpp
src/input/: Request.cpp  Request.h  extract_helper.h  extraxt_helper.cpp  request_types.cpp  request_types.h
src/input/include/: input.h
src/input/test/: edge_test.cpp  json_lohmann_test.cpp  json_requests.cpp  json_requests.h  node_test.cpp  req_type_test.cpp  request_test.cpp  state_tests.cpp  tests.cpp
src/output/: Response.h  json_response.cpp  json_response.h  response_types.h
src/output/include/: output.h
src/output/tests/: json_response.cpp  json_response.h  tests.cpp  to_json_edge.cpp  to_json_fail.cpp  to_json_nodes.cpp  to_json_state.cpp  to_json_test.cpp
test/: edge_test.cpp  json_lohmann_test.cpp  node_test.cpp  state_test.cpp  test.cpp  tests.cpp
